[package]
name = "lospec-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/bin/main.rs"
name = "lospec"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
reqwest = { version = "0.11", features = [
    "rustls-tls",
], default_features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1.36", features = ["full"] }
