[package]
name = "lospec-cli"
version = "0.2.0"
edition = "2021"
authors = ["José Duarte <duarte.gmj@gmail.com>"]
homepage = "https://github.com/jmg-duarte/lospec-cli"
repository = "https://github.com/jmg-duarte/lospec-cli"
documentation = "https://docs.rs/lospec-cli"
readme = "README.md"
license-file = "LICENSE"
description = "Lospec CLI is a command-line interface tool that allows users to interact with Lospec's color palettes conveniently. With this tool, you can search for color palettes and download them."
keywords = ["color", "palette", "lospec", "cli"]
categories = ["command-line-utilities", "game-development"]

[[bin]]
path = "src/bin/main.rs"
name = "lospec"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
reqwest = { version = "0.11", features = [
    "rustls-tls",
], default_features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1.36", features = ["full"] }
